Inclusão de rota health check e atualização Readme e Swagger
