# utils/swagger.json
@@ -13,6 +13,10 @@
         "produces": "['application/json']",
         "tags": [
             {
+                "name": "Health-App",
+                "description": "Endpoint da saúde da aplicação"
+            },
+            {
                 "name": "Usuários",
                 "description": "Endpoints de Usuários"
             },
@@ -23,6 +27,26 @@
         ],
         "paths": 
         {
+            "/health": 
+            {
+                "get": 
+                {
+                    "tags": ["Health-App"],
+                    "sumary": "",
+                    "description": "Checagem da conexão da aplicação com o banco de dados (MySQL)",
+                    "responses": 
+                    {
+                        "200": 
+                        {
+                            "description": "Banco de dados conectado com sucesso!"
+                        },
+                        "500": 
+                        {
+                            "description": "Não foi possível conectar a base de dados!"
+                        }
+                    }
+                }
+            },
             "/usuario": 
             {
                 "post": 
